--- a/src/NetPack/project.json
+++ b/src/NetPack/project.json
@@ -1,6 +1,11 @@
 ﻿{
   "version": "1.0.0-*",
 
+  "buildOptions": {
+    "copyToOutput": "netpack-typescript.js",
+    "embed": "netpack-typescript.js"
+  },
+
   "dependencies": {
     "NETStandard.Library": "1.6.0",
     "Microsoft.AspNetCore.NodeServices": "1.0.0-beta-000007",
@@ -13,7 +18,7 @@
       "imports": "dnxcore50"
     },
     "net452": {
-     
+
     }
   }
 }
