--- a/src/NetPack/project.json
+++ b/src/NetPack/project.json
@@ -10,7 +10,9 @@
     "NETStandard.Library": "1.6.0",
     "Microsoft.AspNetCore.NodeServices": "1.0.0-beta-000007",
     "Microsoft.Extensions.FileProviders.Composite": "1.0.0",
-    "Microsoft.Extensions.FileProviders.Embedded": "1.0.0"
+    "Microsoft.Extensions.FileProviders.Embedded": "1.0.0",
+    "Microsoft.Extensions.Options": "1.0.0",
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0"
   },
 
   "frameworks": {
