--- a/src/NetPack/project.json
+++ b/src/NetPack/project.json
@@ -12,7 +12,8 @@
     "Microsoft.Extensions.FileProviders.Composite": "1.0.0",
     "Microsoft.Extensions.FileProviders.Embedded": "1.0.0",
     "Microsoft.Extensions.Options": "1.0.0",
-    "Microsoft.AspNetCore.StaticFiles": "1.0.0"
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0",
+    "NUglify": "1.5.2"
   },
 
   "frameworks": {
