--- a/src/NetPack.Web/project.json
+++ b/src/NetPack.Web/project.json
@@ -24,7 +24,6 @@
   },
 
   "tools": {
-    "BundlerMinifier.Core": "2.0.238",
     "Microsoft.AspNetCore.Razor.Tools": "1.0.0-preview2-final",
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": "1.0.0-preview2-final"
   },
@@ -32,8 +31,8 @@
   "frameworks": {
     "netcoreapp1.0": {
       "imports": "dnxcore50"
-    }   
-  },  
+    }
+  },
 
   "buildOptions": {
     "emitEntryPoint": true,
@@ -57,7 +56,7 @@
   },
 
   "scripts": {
-    "prepublish": [ "bower install", "dotnet bundle" ],
+    "prepublish": [ "bower install" ],
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   }
 }
