--- a/src/NetPack/project.json
+++ b/src/NetPack/project.json
@@ -16,7 +16,8 @@
     "Microsoft.Extensions.Options": "1.0.0",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0",
     "NUglify": "1.5.2",
-    "Polly": "4.3.0"
+    "Polly": "4.3.0",
+    "ReflectionBridge":  "0.0.11"
   },
 
   "frameworks": {
