More tests, and demo pages added. Bundle source map demo page. problem to fix in chrome, cannot parse the generated sourcemap.

--- a/src/NetPack.Web/web.config
+++ b/src/NetPack.Web/web.config
@@ -5,7 +5,14 @@
     Configure your application settings in appsettings.json. Learn more at http://go.microsoft.com/fwlink/?LinkId=786380
   -->
 
+
+
+
   <system.webServer>
+    <staticContent>
+      <remove fileExtension=".ts" />
+      <mimeMap fileExtension=".ts" mimeType="application/x-typescript" />
+    </staticContent>
     <handlers>
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified"/>
     </handlers>
