turned test off as this is run by cake script.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,5 +6,6 @@ environment:
   PUBLIC_NUGET_FEED_SOURCE: https://www.nuget.org/
 build_script:
 - cmd: ./build.cmd
+test: off
 artifacts:
 - path: ./artifacts/*
