--- a/src/NetPack/project.json
+++ b/src/NetPack/project.json
@@ -18,13 +18,13 @@
     "NUglify": "1.5.2",
     "Polly": "4.3.0",
     "ReflectionBridge": "0.0.11",
-    "Dazinator.AspNet.Extensions.FileProviders": "1.1.0-unstable0009"
+    "Dazinator.AspNet.Extensions.FileProviders": "1.2.0"
   },
 
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50",
-      "buildOptions": {"define": ["NETSTANDARD"]}
+      "buildOptions": { "define": [ "NETSTANDARD" ] }
     },
     "net452": {
 
