--- a/src/NetPack.Web/project.json
+++ b/src/NetPack.Web/project.json
@@ -20,7 +20,9 @@
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
-    "NetPack": "1.0.0-*"
+    "NetPack": "1.0.0-*",
+    "NetPack.Typescript": "1.0.0-*",
+    "NetPack.JsCombine": "1.0.0-*"
   },
 
   "tools": {
