#15 and #11 More requirejs work. Started work on JsMin.

--- a/src/NetPack.Web/project.json
+++ b/src/NetPack.Web/project.json
@@ -23,7 +23,8 @@
     "NetPack": "1.0.0-*",
     "NetPack.Typescript": "1.0.0-*",
     "NetPack.JsCombine": "1.0.0-*",
-    "NetPack.RequireJs": "1.0.0-*"
+    "NetPack.RequireJs": "1.0.0-*",
+    "NetPack.RequireJs.TagHelpers": "1.0.0-*"
   },
 
   "tools": {
