--- a/src/NetPack.Web/project.json
+++ b/src/NetPack.Web/project.json
@@ -24,7 +24,8 @@
     "NetPack.Typescript": "1.0.0-*",
     "NetPack.JsCombine": "1.0.0-*",
     "NetPack.RequireJs": "1.0.0-*",
-    "NetPack.RequireJs.TagHelpers": "1.0.0-*"
+    "NetPack.RequireJs.TagHelpers": "1.0.0-*",
+    "NetPack.JsMin": "1.0.0-*"
   },
 
   "tools": {
