--- a/src/NetPack.JsMin/NetPack.JsMin.csproj
+++ b/src/NetPack.JsMin/NetPack.JsMin.csproj
@@ -20,12 +20,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNet.Glob" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Composite" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.0.2" />
     <PackageReference Include="ReflectionBridge" Version="0.0.11" />
-    <PackageReference Include="Dazinator.AspNet.Extensions.FileProviders" Version="1.2.0" />
+    <PackageReference Include="Dazinator.AspNet.Extensions.FileProviders" Version="1.4.0" />
     <PackageReference Include="DotNet.SourceMaps" Version="0.2.0" />
   </ItemGroup>
 
