--- a/src/NetPack/NetPack.csproj
+++ b/src/NetPack/NetPack.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>-->
 
   <ItemGroup>
+    <PackageReference Include="DotNet.Glob" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.NodeServices" Version="1.0.0-beta-000021" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Composite" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="1.0.1" />
@@ -24,7 +25,7 @@
     <PackageReference Include="NUglify" Version="1.5.2" />
     <PackageReference Include="Polly" Version="6.1.0" />
     <PackageReference Include="ReflectionBridge" Version="0.0.11" />
-    <PackageReference Include="Dazinator.AspNet.Extensions.FileProviders" Version="1.2.0" />
+    <PackageReference Include="Dazinator.AspNet.Extensions.FileProviders" Version="1.4.0" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
