--- a/src/NetPack.JsMin/NetPack.JsMin.csproj
+++ b/src/NetPack.JsMin/NetPack.JsMin.csproj
@@ -1,14 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.6;net452</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6</TargetFrameworks>
     <AssemblyName>NetPack.JsMin</AssemblyName>
     <PackageId>NetPack.JsMin</PackageId>
   </PropertyGroup>
-
-  <!--<ItemGroup>
-    <EmbeddedResource Include="Embedded" Exclude="bin\**;obj\**;**\*.xproj;packages\**;@(EmbeddedResource)" />
-  </ItemGroup>-->
 
   <ItemGroup>
     <ProjectReference Include="..\NetPack\NetPack.csproj" />
@@ -21,11 +17,6 @@
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
     <DefineConstants>$(DefineConstants);NETSTANDARD</DefineConstants>
   </PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Properties\" />
