--- a/src/NetPack.RequireJs.TagHelpers/NetPack.RequireJs.TagHelpers.csproj
+++ b/src/NetPack.RequireJs.TagHelpers/NetPack.RequireJs.TagHelpers.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.6;net452</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6</TargetFrameworks>
     <AssemblyName>NetPack.RequireJs.TagHelpers</AssemblyName>
     <PackageId>NetPack.RequireJs.TagHelpers</PackageId>
   </PropertyGroup>
@@ -21,11 +21,6 @@
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
     <DefineConstants>$(DefineConstants);NETSTANDARD</DefineConstants>
   </PropertyGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Properties\" />
