--- a/src/NetPack/NetPack.csproj
+++ b/src/NetPack/NetPack.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.6</TargetFrameworks>
+    <TargetFrameworks>netstandard1.6;netstandard2.0</TargetFrameworks>
     <AssemblyName>NetPack</AssemblyName>
     <PackageId>NetPack</PackageId>
     <!--<NetStandardImplicitPackageVersion>1.6.0</NetStandardImplicitPackageVersion>-->
@@ -17,20 +17,42 @@
 
   <ItemGroup>
     <PackageReference Include="DotNet.Glob" Version="2.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.NodeServices" Version="1.1.0" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Composite" Version="1.0.1" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="1.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="1.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.0.2" />
+   
     <PackageReference Include="NUglify" Version="1.5.2" />
     <PackageReference Include="Polly" Version="6.1.0" />
     <PackageReference Include="Dazinator.AspNet.Extensions.FileProviders" Version="1.4.0" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.1" />
+
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Composite" Version="1.0.1" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="1.0.1" />
+  
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.0.2" />
   </ItemGroup>
 
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard1.6' ">
     <DefineConstants>$(DefineConstants);NETSTANDARD</DefineConstants>
   </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.6'">
+    <PackageReference Include="Microsoft.AspNetCore.NodeServices" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="1.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.NodeServices.Sockets">
+      <Version>1.1.0-beta-000002</Version>
+    </PackageReference>    
+    
+  </ItemGroup>
+
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+    <DefineConstants>$(DefineConstants);NETSTANDARD;NODESERVICESASYNC</DefineConstants>
+  </PropertyGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.AspNetCore.NodeServices" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.NodeServices.Sockets">
+      <Version>2.0.4-rtm-10026</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.0" />
+  </ItemGroup>
   
   <ItemGroup>
     <Folder Include="Properties\" />
