--- a/src/NetPack.RequireJs.Tests/NetPack.RequireJs.Tests.csproj
+++ b/src/NetPack.RequireJs.Tests/NetPack.RequireJs.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netcoreapp20</TargetFramework>
     <AssemblyName>NetPack.RequireJs.Tests</AssemblyName>
     <PackageId>NetPack.RequireJs.Tests</PackageId>
   </PropertyGroup>
@@ -20,7 +20,7 @@
     </PackageReference>
     <PackageReference Include="xunit" Version="2.4.0" />   
     <PackageReference Include="Moq" Version="4.10.0" />
-    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="1.0.5" />   
+    <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.3" />   
     <PackageReference Include="Microsoft.AspNetCore.Razor.Runtime" Version="1.0.2" />
   </ItemGroup>
 
