--- a/src/NetPack.Typescript.Tests/NetPack.Typescript.Tests.csproj
+++ b/src/NetPack.Typescript.Tests/NetPack.Typescript.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netcoreapp20</TargetFramework>
     <AssemblyName>NetPack.Typescript.Tests</AssemblyName>
     <PackageId>NetPack.Typescript.Tests</PackageId>
   </PropertyGroup>
@@ -23,10 +23,10 @@
     <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="2.0.3" />   
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
+  <!--<ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
+  </ItemGroup>-->
 
   <ItemGroup>
     <Folder Include="Properties\" />
