Closes #29 Fixed typescript incremental compilation and sample pages.

--- a/src/NetPack.Typescript/NetPack.Typescript.csproj
+++ b/src/NetPack.Typescript/NetPack.Typescript.csproj
@@ -10,6 +10,11 @@
     <EmbeddedResource Include="Embedded\**\*" Exclude="bin\**;obj\**;**\*.xproj;packages\**;@(EmbeddedResource)" />
   </ItemGroup>
 
+  <!--<ItemGroup>
+    <None Remove="Embedded\netpack-testfiles.js" />
+    <None Remove="Embedded\netpack-typescript.js" />
+  </ItemGroup>-->
+
   <ItemGroup>
     <ProjectReference Include="..\NetPack\NetPack.csproj" />
   </ItemGroup> 
