--- a/src/NetPack/NetPack.csproj
+++ b/src/NetPack/NetPack.csproj
@@ -35,9 +35,9 @@
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.6'">
     <PackageReference Include="Microsoft.AspNetCore.NodeServices" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="1.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.NodeServices.Sockets">
+    <!--<PackageReference Include="Microsoft.AspNetCore.NodeServices.Sockets">
       <Version>1.1.0-beta-000002</Version>
-    </PackageReference>
+    </PackageReference>-->
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.0.2" />
   </ItemGroup>
 
@@ -47,9 +47,9 @@
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
     <PackageReference Include="Microsoft.AspNetCore.NodeServices" Version="2.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.NodeServices.Sockets">
+    <!--<PackageReference Include="Microsoft.AspNetCore.NodeServices.Sockets">
       <Version>2.0.4-rtm-10026</Version>
-    </PackageReference>
+    </PackageReference>-->
     <PackageReference Include="Microsoft.Extensions.Options" Version="2.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.1.0" />
   </ItemGroup>
