--- a/src/NetPack/NetPack.csproj
+++ b/src/NetPack/NetPack.csproj
@@ -19,7 +19,7 @@
     <PackageReference Include="Dazinator.AspNet.Extensions.FileProviders" Version="1.5.0-unstable0014" />
     <PackageReference Include="DotNet.Glob" Version="2.1.1" />
    
-    <PackageReference Include="NUglify" Version="1.5.2" />
+    <!--<PackageReference Include="NUglify" Version="1.5.2" />-->
     <PackageReference Include="Polly" Version="6.1.0" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.1" />
 
