#30 - rollup code splitting pipe under way.

--- a/src/NetPack.Rollup/NetPack.Rollup.csproj
+++ b/src/NetPack.Rollup/NetPack.Rollup.csproj
@@ -8,11 +8,15 @@
 
   <ItemGroup>
     <None Remove="Embedded\netpack-rollup-optimise.js" />
+    <None Remove="Embedded\RollupCodeSplittingTemplate.txt" />
     <None Remove="Embedded\RollupTemplate.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Embedded\netpack-rollup-optimise.js" />
+    <EmbeddedResource Include="Embedded\RollupCodeSplittingTemplate.txt">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Embedded\RollupTemplate.txt">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
