#26 - Hot Module Replacement - File change notifications (WIP)

--- a/src/NetPack.Web/NetPack.Web.csproj
+++ b/src/NetPack.Web/NetPack.Web.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NetPack.BrowserReload\NetPack.BrowserReload.csproj" />
+    <ProjectReference Include="..\NetPack.HotModuleReload\NetPack.HotModuleReload.csproj" />
     <ProjectReference Include="..\NetPack.Rollup\NetPack.Rollup.csproj" />
     <ProjectReference Include="..\NetPack\NetPack.csproj" />
     <ProjectReference Include="..\NetPack.Typescript\NetPack.Typescript.csproj" />
