--- a/src/NetPack.BrowserReload/NetPack.BrowserReload.csproj
+++ b/src/NetPack.BrowserReload/NetPack.BrowserReload.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="resources\**\*" />
+    <EmbeddedResource Include="embedded\**\*" />
   </ItemGroup>
 
   <ItemGroup>
