--- a/src/NetPack.HotModuleReload/NetPack.HotModuleReload.csproj
+++ b/src/NetPack.HotModuleReload/NetPack.HotModuleReload.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="resources\**\*" />
-  </ItemGroup>
+    <EmbeddedResource Include="embedded\**\*" />
+  </ItemGroup>  
 
   <ItemGroup>
     <ProjectReference Include="..\NetPack\NetPack.csproj" />
