System JS HMR closes #26 closes #35

--- a/src/NetPack.RequireJs.TagHelpers/NetPack.RequireJs.TagHelpers.csproj
+++ b/src/NetPack.RequireJs.TagHelpers/NetPack.RequireJs.TagHelpers.csproj
@@ -7,7 +7,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Embedded\**" Exclude="bin\**;obj\**;**\*.xproj;packages\**;@(EmbeddedResource)" />
+    <EmbeddedResource Include="embedded\**\*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="embedded\netpack\js\require.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="embedded\netpack\js\require.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="embedded\netpack\js\require.js">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
