--- a/src/NetPack.Web/NetPack.Web.csproj
+++ b/src/NetPack.Web/NetPack.Web.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NetPack.BrowserReload\NetPack.BrowserReload.csproj" />
+    <ProjectReference Include="..\NetPack.HotModuleReload.TagHelpers\NetPack.HotModuleReload.TagHelpers.csproj" />
     <ProjectReference Include="..\NetPack.HotModuleReload\NetPack.HotModuleReload.csproj" />
     <ProjectReference Include="..\NetPack.Rollup\NetPack.Rollup.csproj" />
     <ProjectReference Include="..\NetPack\NetPack.csproj" />
@@ -46,6 +47,9 @@
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Home\RequireJsHmr.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Home\SystemHmrTagHelper.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Home\SystemHmr.cshtml">
