RequireJS HMR #36 Still need to sort mismatched anon define when using requirejs.

--- a/src/NetPack.Web/NetPack.Web.csproj
+++ b/src/NetPack.Web/NetPack.Web.csproj
@@ -10,14 +10,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Remove="wwwroot\js\reloader-require.js" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="wwwroot\js\reloader-require.js" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.4" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.WebSockets" Version="2.1.1" />
@@ -44,6 +36,9 @@
 
   <ItemGroup>
     <Content Update="Views\Home\BrowserReload.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+    <Content Update="Views\Home\RequireJSHmrTagHelper.cshtml">
       <Pack>$(IncludeRazorContentInPack)</Pack>
     </Content>
     <Content Update="Views\Home\RequireJsHmr.cshtml">
