Perf improvements for npm install. Also fixed up demo pages. #38

--- a/src/NetPack.RequireJs.TagHelpers/NetPack.RequireJs.TagHelpers.csproj
+++ b/src/NetPack.RequireJs.TagHelpers/NetPack.RequireJs.TagHelpers.csproj
@@ -11,20 +11,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Remove="embedded\netpack\js\require.js" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="embedded\netpack\js\require.js" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="embedded\netpack\js\require.js">
-      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\NetPack.RequireJs\NetPack.RequireJs.csproj" />
   </ItemGroup>
 
@@ -37,6 +23,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="embedded\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
