--- a/src/NetPack.Web.Blazor/Properties/launchSettings.json
+++ b/src/NetPack.Web.Blazor/Properties/launchSettings.json
@@ -22,6 +22,17 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:57101/"
+    },
+    "Watch": {
+      "commandName": "Project",
+      "executablePath": "dotnet.exe",
+      "workingDirectory": "$(ProjectDir)",
+      "commandLineArgs": "watch run",
+      "launchBrowser": true,
+      "launchUrl": "http://localhost:5000/",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
