--- a/src/NetPack.Blazor/NetPack.Blazor.csproj
+++ b/src/NetPack.Blazor/NetPack.Blazor.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NetPack.Process\NetPack.Process.csproj" />
     <ProjectReference Include="..\NetPack\NetPack.csproj" />
   </ItemGroup>
 
