--- a/src/NetPack.BrowserReload.BlazorClient/NetPack.BrowserReload.BlazorClient.csproj
+++ b/src/NetPack.BrowserReload.BlazorClient/NetPack.BrowserReload.BlazorClient.csproj
@@ -11,8 +11,8 @@
 
   <ItemGroup>
     <!--<PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.0.0-preview6.19307.2" PrivateAssets="all" />-->
-    <PackageReference Include="Microsoft.AspNetCore.Components.Browser" Version="3.0.0-preview7.19365.7" />
-    <PackageReference Include="BlazorSignalR" Version="0.8.0-blazor-3.0.0-preview7.19365.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0-preview8.19405.7" />
+    <PackageReference Include="BlazorSignalR" Version="0.9.0-blazor-3.0.0-preview8.19405.7" />
   </ItemGroup>
 
 
