--- a/src/NetPack.Web.Blazor.Host/NetPack.Web.Blazor.Host.csproj
+++ b/src/NetPack.Web.Blazor.Host/NetPack.Web.Blazor.Host.csproj
@@ -9,8 +9,8 @@
     <ProjectReference Include="..\NetPack.BrowserReload\NetPack.BrowserReload.csproj" />
     <ProjectReference Include="..\NetPack.Process\NetPack.Process.csproj" />
     <ProjectReference Include="..\NetPack.Web.Blazor\NetPack.Web.Blazor.csproj" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="3.0.0-preview8.19405.7" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.0-preview8.19405.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="3.0.0-preview9.19465.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.0" />
 
     
   </ItemGroup>
