--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,7 @@ skip_tags: true
 image: Visual Studio 2019 Preview
 install:
   - cinst dotnetcore-sdk --version 3.0.100
+  - cinst dotnetcore-sdk --version 3.1.100
   - dotnet new -i Microsoft.AspNetCore.Blazor.Templates
 environment:
   NuGetOrgApiKey: 
