--- a/src/NetPack.BrowserReload.BlazorClient/NetPack.BrowserReload.BlazorClient.csproj
+++ b/src/NetPack.BrowserReload.BlazorClient/NetPack.BrowserReload.BlazorClient.csproj
@@ -11,8 +11,9 @@
 
   <ItemGroup>
     <!--<PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.0.0-preview6.19307.2" PrivateAssets="all" />-->
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.0" />
-    <PackageReference Include="BlazorSignalR" Version="0.12.0-blazor-3.1.0-preview3.19555.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="3.1.1" />
+    <!--<PackageReference Include="BlazorSignalR" Version="0.12.0-blazor-3.1.0-preview3.19555.2" />-->
   </ItemGroup>
 
 
