--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,7 @@ version: 1.0.{build}
 skip_tags: true
 image: Visual Studio 2022
 install:
-  - cinst dotnetcore-sdk --version 6.0.201
-  - cinst dotnetcore-sdk --version 6.0.201
+  - cinst dotnet-sdk --version 6.0.201  
   - dotnet new -i Microsoft.AspNetCore.Blazor.Templates
 environment:
   NuGetOrgApiKey: 
